# audio-extraction

./: .gitignore  Makefile  README.md  agents.md  pyproject.toml
docs/: architecture.md  setup-guide.md
src/audio_extraction/: __init__.py  __main__.py  cli.py  discovery.py  extractor.py  formats.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_extractor.py  test_formats.py
